# verbena

./: .gitignore  LICENSE  README.md
backend/: .env  Cargo.toml  dotenv.sample  rustfmt.toml
backend/api_error/: Cargo.toml
backend/migrations/0001_users/: down.sql  up.sql
backend/migrations/0002_user_role/: down.sql  up.sql
backend/migrations/0003_user_registration/: down.sql  up.sql
backend/migrations/0004_streams/: down.sql  up.sql
backend/migrations/0005_test_data/: down.sql  up.sql
backend/migrations/0006_profiles/: down.sql  up.sql
backend/migrations/0007_chats/: down.sql  up.sql
backend/src/: dbase.rs  errors.rs  hash_tools.rs  lib.rs  main.rs  schema.rs  static_controller.rs  swagger_docs.rs  validators.rs
backend/src/cdis/: coding.rs
backend/src/chats/: blocked_user_controller.rs  blocked_user_models.rs  blocked_user_orm.rs  chat_controller.rs  chat_event_ws.rs  chat_message.rs  chat_message_controller.rs  chat_message_models.rs  chat_message_orm.rs  chat_message_storage.rs  chat_message_test.rs  chat_models.rs  chat_msg_blocked_test.rs  chat_msg_test.rs  chat_msg_test_delete.rs  chat_msg_test_get.rs  chat_msg_test_post_put.rs  chat_msg_test_post_put_del.rs  chat_ws_assistant.rs  chat_ws_controller.rs  chat_ws_server.rs  chat_ws_session.rs  chat_ws_test.rs  chat_ws_test_1.rs  chat_ws_test_2.rs  chat_ws_test_3.rs  message.rs  mod.rs  server.rs  session.rs
backend/src/date_coding/: coding.rs
backend/src/dbase/: db.rs
backend/src/email/: config_smtp.rs  mailer.rs  mod.rs  send_mail.rs
backend/src/extractors/: authentication.rs  authentication2.rs  authentication2_test.rs  authentication_test.rs  authentication_token.rs  mod.rs
backend/src/file_upload/: upload.rs
backend/src/loading/: dynamic_image.rs  err_upload_into.rs  mod.rs  upload_file.rs
backend/src/profiles/: config_prfl.rs  mod.rs  profile_auth_controller.rs  profile_auth_test.rs  profile_check.rs  profile_check_test.rs  profile_checks.rs  profile_controller.rs  profile_err.rs  profile_get_controller.rs  profile_models.rs  profile_orm.rs  profile_registr_controller.rs  profile_registr_test.rs  profile_test_delete.rs  profile_test_get.rs  profile_test_put.rs  profile_test_put_delete.rs
backend/src/send_email/: config_smtp.rs  mailer.rs  mod.rs
backend/src/sessions/: config_jwt.rs  hash_tools.rs  mod.rs  session_models.rs  session_orm.rs  tokens.rs  tools_token.rs
backend/src/settings/: config_app.rs  err.rs  mod.rs
backend/src/streams/: config_avatar_files.rs  config_slp.rs  config_strm.rs  mod.rs  stream_controller.rs  stream_extra.rs  stream_extra_test.rs  stream_get_controller.rs  stream_models.rs  stream_orm.rs  stream_tag_orm.rs  stream_test_get.rs  stream_test_post_delete.rs  stream_test_put.rs  util_upload.rs
backend/src/tools/: evn_data.rs  mod.rs  template_rendering.rs
backend/src/users/: config_usr.rs  mod.rs  user_auth_controller.rs  user_controller.rs  user_models.rs  user_orm.rs  user_orm_mock.rs  user_recovery_orm.rs  user_registr_controller.rs  user_registr_models.rs  user_registr_orm.rs  users_consts.rs  users_controller.rs  users_models.rs  users_service.rs
backend/src/utils/: config_app.rs  crypto.rs  date_time_rfc2822z.rs  datetime_format.rs  datetime_offset.rs  encoding.rs  err.rs  errors.rs  mod.rs  option_date_time.rs  parse_err.rs  parser.rs  path_file.rs  serial_datetime.rs  serial_datetime_option.rs  ssl_acceptor.rs  strings.rs  token.rs  token_verification.rs  validations.rs
backend/templates/: basic_layout.hbs  password_recovery.hbs  reset_password.hbs  verification_code.hbs
backend/vrb_api_tools/: Cargo.toml
backend/vrb_api_tools/src/: api_error.rs
backend/vrb_app/: Cargo.toml
backend/vrb_app/src/: lib.rs  main.rs  static_controller.rs  swagger_docs.rs
backend/vrb_authent/: Cargo.toml
backend/vrb_authent/src/: authentication.rs  authentication_test.rs  config_jwt.rs  lib.rs  profile_models2.rs  user_auth_models.rs  user_auth_orm.rs  user_authent_controller.rs  user_authent_models.rs  user_authent_test.rs  user_mock.rs  user_models.rs  user_orm.rs  user_profile_mock.rs  user_recovery_controller.rs  user_recovery_models.rs  user_recovery_orm.rs  user_recovery_test.rs  user_registr_controller.rs  user_registr_models.rs  user_registr_orm.rs  user_registr_test.rs
backend/vrb_authentication/: Cargo.toml
backend/vrb_authentication/src/: authentication.rs  authentication_test.rs
backend/vrb_chats/: Cargo.toml
backend/vrb_chats/src/: chat_event_ws.rs  chat_message.rs  chat_message_controller.rs  chat_message_models.rs  chat_message_orm.rs  chat_msg_blocked_test.rs  chat_msg_test_delete.rs  chat_msg_test_get.rs  chat_msg_test_post_put.rs  chat_ws_assistant.rs  chat_ws_async_result.rs  chat_ws_blck.rs  chat_ws_controller.rs  chat_ws_msg.rs  chat_ws_prm.rs  chat_ws_server.rs  chat_ws_session.rs  chat_ws_session_blck.rs  chat_ws_session_prm.rs  chat_ws_test_1.rs  chat_ws_test_2.rs  chat_ws_test_3.rs  chat_ws_test_base.rs  chat_ws_test_blck.rs  chat_ws_test_msg.rs  chat_ws_test_prm.rs  chat_ws_tools.rs  lib.rs
backend/vrb_common/: Cargo.toml
backend/vrb_common/src/: api_error.rs  consts.rs  consts_test.rs  crypto.rs  env_var.rs  err.rs  file_path.rs  lib.rs  profile.rs  user_validations.rs  validators.rs
backend/vrb_dbase/: Cargo.toml
backend/vrb_dbase/src/: db_enums.rs  dbase.rs  enm_stream_state.rs  enm_user_role.rs  lib.rs  schema.rs  user_auth_orm.rs
backend/vrb_profiles/: Cargo.toml
backend/vrb_profiles/src/: lib.rs  profile_auth_controller.rs  profile_auth_test.rs  profile_check.rs  profile_check_test.rs  profile_controller.rs  profile_models.rs  profile_orm.rs  profile_registr_controller.rs  profile_registr_test.rs  profile_test_delete.rs  profile_test_get.rs  profile_test_put.rs
backend/vrb_streams/: Cargo.toml
backend/vrb_streams/src/: stream_controller.rs  stream_models.rs  stream_orm.rs  stream_test_get.rs  stream_test_post_delete.rs  stream_test_put.rs
backend/vrb_tools/: Cargo.toml
backend/vrb_tools/src/: api_error.rs  config_app.rs  consts.rs  crypto.rs  err.rs  hash_tools.rs  lib.rs  parser.rs  (+8 more)
(+481 files in other folders)
