[workspace]
members = [
    "vrb_app",
    "vrb_authent",
    "vrb_chats",
    "vrb_common",
    "vrb_dbase",
    "vrb_profiles",
    "vrb_streams",
    "vrb_tools",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
authors = ["alx.melnichuk"]
rust-version = "1.87.0"
license = "MIT"

[workspace.dependencies]
actix = "0.13.5"
actix-broker = "0.4.4"
actix-cors = "0.7.1"
actix-files = "0.6.8"
actix-multipart = "0.7.2"
actix-web = { version = "4.11.0", features = ["openssl"] }
actix-web-actors = "4.3.1"
argon2 = "0.5.3"
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.3", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "2.3.0"
dotenv = "0.15.0"
email_address = "0.2.9"
env_logger = "0.11.8"
futures-util = "0.3.31"
getrandom = "0.3.4"
handlebars = "6.3.2"
image = "0.25.8"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls"] }
log = "0.4.28"
mime = "0.3.17"
openssl = "0.10.74"
r2d2 = "0.8.10"
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
utoipa = { version = "5.4.0", features = ["chrono", "actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
vrb_app = { version = "0.1", path="./vrb_app" }
vrb_authent = { version = "0.1", path="./vrb_authent" }
vrb_chats = { version = "0.1", path="./vrb_chats" }
vrb_common = { version = "0.1", path="./vrb_common" }
vrb_dbase = { version = "0.1", path="./vrb_dbase" }
vrb_profiles = { version = "0.1", path="./vrb_profiles" }
vrb_streams = { version = "0.1", path="./vrb_streams" }
vrb_tools = { version = "0.1", path="./vrb_tools" }

[profile.dev]
debug = 1