[package]
name = "api-error"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
actix-web = { version = "4.11.0", features = ["openssl"] }
mime = "0.3.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
utoipa = { version = "5.3.1", features = ["chrono", "actix_extras"] }
