[package]
name = "vrb-api-tools"
version = "0.1.0"
edition = "2021"
description = "API tool library for the Verbena project."
rust-version = "1.87.0"
keywords = ["API-Tools", "ApiError"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4.11.0", features = ["openssl"] }
mime = "0.3.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
utoipa = { version = "5.3.1", features = ["chrono", "actix_extras"] }
