[package]
name = "vrb_app"
version = "0.1.0"
edition = "2021"
description = "Library for assembling a binary file."
rust-version = "1.87.0"
keywords = ["vrb_app"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = { version = "4.11.0", features = ["openssl"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
utoipa = { version = "5.3.1", features = ["chrono", "actix_extras"] } # use in "vrb_dbase"
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
vrb_authent = { version = "0.1", path="../vrb_authent" }
vrb_chats = { version = "0.1", path="../vrb_chats" }
vrb_common = { version = "0.1", path="../vrb_common" }
vrb_dbase = { version = "0.1", path="../vrb_dbase" }
vrb_profiles = { version = "0.1", path="../vrb_profiles" }
vrb_streams = { version = "0.1", path="../vrb_streams" }
vrb_tools = { version = "0.1", path="../vrb_tools" }

[features]
# default = ["test", "mockdata"]
test=[]
mockdata = []

[profile.dev]
debug = 1
