[package]
name = "vrb-authent"
version = "0.1.0"
edition = "2021"
description = "Library for authorization functions."
rust-version = "1.87.0"
keywords = ["profiles", "vrb-profiles"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4.11.0", features = ["openssl"] }
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.10", features = ["postgres", "r2d2", "chrono"] }
futures-util = "0.3.31"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140" # use in "vrb_dbase"
# utoipa = { version = "5.3.1", features = ["chrono", "actix_extras"] } # use in "vrb_dbase"
vrb-common = { version = "0.1", path="../vrb_common" }
vrb-dbase = { version = "0.1", path="../vrb_dbase" }
vrb-tools = { version = "0.1", path="../vrb_tools" }

[features]
# default = ["test", "mockdata"]
test=[]
mockdata = []

[profile.dev]
debug = 1
