[package]
name = "vrb_chats"
version = "0.4.0"
edition = "2024"
description = "Library for chat functions."
keywords = ["vrb_chats", "web_chat"]
license = { workspace = true }
rust-version = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
actix = { workspace = true }
actix-broker = { workspace = true }
actix-web = { workspace = true }
actix-web-actors = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
vrb_authent = { version = "0.4", path="../vrb_authent" }
vrb_common = { version = "0.4", path="../vrb_common" }
vrb_dbase = { version = "0.4", path="../vrb_dbase" }
vrb_tools = { version = "0.4", path="../vrb_tools" }

[features]
# default = ["test", "mockdata"]
test=[]
mockdata = []

[dev-dependencies]
# To perform testing of websocket interaction.
actix-test = "0.1"
vrb_authent = { version = "0.4", path="../vrb_authent", features = ["mockdata"] }
