[package]
name = "vrb_common"
version = "0.1.0"
edition = "2024"
description = "A library for commonly used elements."
keywords = ["vrb_common", "ApiError", "crypto", "parser", "serial-datetime", "validators"]
license = { workspace = true }
rust-version = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = { workspace = true }
chrono = { workspace = true }
email_address = { workspace = true }
mime = { workspace = true }
openssl = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }

[features]
# default = ["test", "mockdata"]
test=[]
mockdata = []
