[package]
name = "vrb_dbase"
version = "0.1.0"
edition = "2021"
description = "Library for the entire database structure of the Verbena project."
rust-version = "1.87.0"
keywords = ["vrb_dbase", "dbase", "db_enums"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4.11.0", features = ["openssl"] }
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.10", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "2.2.0"
log = "0.4.27"
r2d2 = "0.8.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
utoipa = { version = "5.3.1", features = ["chrono", "actix_extras"] }
vrb-tools = { version = "0.1", path="../vrb_tools" }

[profile.dev]
debug = 1
