[package]
name = "vrb_profiles"
version = "0.1.0"
edition = "2021"
description = "Library for working with the 'profile' entity (user)."
rust-version = "1.87.0"
keywords = ["profiles", "vrb_profiles"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4.11.0", features = ["openssl"] }
actix-multipart = "0.7.2"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.10", features = ["postgres", "r2d2", "chrono"] }
# diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
log = "0.4.27"
mime = "0.3.17"
# r2d2 = "0.8.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
utoipa = { version = "5.3.1", features = ["chrono", "actix_extras"] }
vrb_dbase = { version = "0.1", path="../vrb_dbase" }
vrb-tools = { version = "0.1", path="../vrb_tools" }

[features]
# default = ["test", "mockdata"]
test=[]
mockdata = []

[profile.dev]
debug = 1
