[package]
name = "vrb-streams"
version = "0.1.0"
edition = "2021"
description = "The library stores modules for working with streams."
rust-version = "1.87.0"
keywords = ["vrb-streams"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
actix-multipart = "0.7.2"
actix-web = { version = "4.11.0", features = ["openssl"] }
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.10", features = ["postgres", "r2d2", "chrono"] }
log = "0.4.27"
mime = "0.3.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
utoipa = { version = "5.3.1", features = ["chrono", "actix_extras"] }
vrb_authent = { version = "0.1", path="../vrb_authent" }
vrb_common = { version = "0.1", path="../vrb_common" }
vrb_dbase = { version = "0.1", path="../vrb_dbase" }
vrb-tools = { version = "0.1", path="../vrb_tools" }

[features]
# default = ["test", "mockdata"]
test=[]
mockdata = []

[dev-dependencies]
# To test a web form with data and a file.
actix-multipart-test = "0.0.3"
vrb_authent = { version = "0.1", path="../vrb_authent", features = ["mockdata"] }
vrb_common = { version = "0.1", path="../vrb_common", features = ["mockdata"] }

[profile.dev]
debug = 1
