[package]
name = "vrb-tools"
version = "0.1.0"
edition = "2021"
description = "Tool library for the Verbena project."
rust-version = "1.87.0"
keywords = ["API", "vrb-tools", "ApiError"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4.11.0", features = ["openssl"] }
argon2 = { version = "0.5.3", features = ["std"] }
chrono = { version = "0.4.41", features = ["serde"] }
handlebars = "6.3.2"
#image = "0.24.9" # this is a working version. 0.25.1, 0.25.2 - bad
image = "0.25.6"
lettre = { version = "0.11.16", features = ["tokio1", "tokio1-native-tls"] }
mime = "0.3.17"
openssl = "0.10.72"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
utoipa = { version = "5.3.1", features = ["chrono", "actix_extras"] }
